Fix several minor layout bugs

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -719,6 +719,10 @@ Print styles
         border: 0;
     }
 
+    .table-collapsible thead tr {
+        padding: 0 .5rem;
+    }
+
     .table-collapsible thead th {
         display: none;
     }
@@ -726,13 +730,18 @@ Print styles
     .table-collapsible thead tr.sortable::before {
         content: "Sort by:";
         display: inline-block;
-        padding: .5rem 0.5rem;
+        padding: 0 .5rem .5rem;
         font-weight: 700;
     }
 
     .table-collapsible thead th.sortable {
         display: inline-block;
         border-bottom: none;
+        padding: 0 .5rem .5rem;
+    }
+
+    .table-collapsible thead th.sortable a {
+        padding: .5rem 0;
     }
 
     .table-collapsible tr {
@@ -745,7 +754,8 @@ Print styles
         border-top: 2px solid #5b616b;
     }
 
-    .table-collapsible tbody th {
+    .table-collapsible tbody th,
+    .table-collapsible tbody td:first-child {
         background-color: rgb(var(--bs-secondary-bg-rgb));
     }
 
@@ -757,7 +767,7 @@ Print styles
         border-left: none;
         border-right: none;
         border-top: none;
-        padding: 0.5rem 0.5rem;
+        padding: 0.5rem 1rem;
     }
 
     .table-collapsible th::after,
@@ -777,7 +787,7 @@ Print styles
         font-weight: 700;
     }
 
-    .table-collapsible tbody th .btn {
+    .table-collapsible tbody .btn {
         vertical-align: baseline;
     }
 } 
